Fixed overflow issue by setting padding-right and margin-right to 0.

--- a/css/site.css
+++ b/css/site.css
@@ -1,6 +1,7 @@
 
 * {
     box-sizing: border-box;
+    
 }
 
 body {
@@ -17,19 +18,20 @@ h3, h4, h5 {
 header {
 
     background-image: radial-gradient(#145A32, #27AE60, #A9DFBF);    
-    padding: 1.6em;
+    padding: 1.5em;
     text-align: center;
     color: whitesmoke;
     font-size: 35px;
     text-shadow: 2px 2px 4px #000000;
     outline-color: #145A32;
-    margin: 0.5em;
+    margin: 0.3em;
     margin-bottom: 0;
+    padding-top: 0rem;
 }
 .logo {
     float:left;
-    padding: 0;
-    margin-top: 0;
+    padding: .4rem;
+    margin-top: .2rem;
     margin-left: auto;
     margin-right: 1em;
 }
@@ -39,9 +41,9 @@ header > h2 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 1em;
     text-align: center;
-    padding: -1em;
+    padding: -1.5em;
     margin: 0;
-    margin-bottom: 1em;
+    margin-bottom: .4em;
 }
 header > h2 img {
     
@@ -139,6 +141,10 @@ li a:hover:not(.active) {
     display: flex; 
     flex-direction: row;
     padding: 1em;
+    padding-right: 0;
+    margin-right:0;
+
+    
 }
 
 /* Create three equal columns that sit next to each other */
@@ -146,13 +152,13 @@ li a:hover:not(.active) {
     -webkit-flex: 1;
     -ms-flex: 1;
     flex: 1;
-
     height: auto;
     text-align: center;
     background-color: white;
     padding: 1em;
-    margin:1em;
+    margin:1rem;
     margin-top: 0rem;
+    margin-right: 1rem;
 }
 .column p {
     text-align: justify;
@@ -246,6 +252,7 @@ thumb:hover {
     position: relative;
     text-align: end;
     padding: 1em;
+    padding-right: 10rem;
     padding-bottom: 0rem;
     
 }
